[REFACTOR] event service test & controller